# openfreemap

./: .envrc  .gitignore  .prettierignore  .prettierrc.js  .ruff.toml  AGENTS.md  LICENSE  LICENSE.md  README.md  TODO.md  TODO.txt  biome-shared.jsonc  biome.jsonc  debug  debug.py  deploy-sync.sh  deploy_linux_host.py  deploy_tilegen.py  hk-local.pkl  hk.pkl  http-host.py  ideas.txt  init-server.py  kernel-ideas.txt  lint.sh  nginx-ideas.txt  package.json  pnpm-lock.yaml  prepare-virtualenv.sh  prettier.config.js  pyproject.toml  pyrightconfig.json  setup.py  tile-gen.py
.github/: FUNDING.yml
config/: .env.sample  .gitignore  cloudflare.ini.sample  config.schema.json  rclone.conf.sample
docs/: debugging_names.md  dev_setup.md  extract.md  ideas-filesystems.txt  kernel-ideas.txt  nginx-ideas.txt  self_hosting.md  tilegen_release_cadence.md
lib/: config.py  dns.py  get_version_shared.py  kernel.py  linux_host_config.py  nginx.py  pkg_base.py  planetiler.py  pycurl.py
linux_host/: assets.py  btrfs.py  config.py  deploy_linux_host.py  linux_host.py  mount.py  nginx_config_gen.py  sync.py  telegram_wrapper.py  versions.py
modules/: prepare-virtualenv.sh
openfreemaps/: config.py  kernel.py  nginx.py  pkg_base.py  planetiler.py  system.py  utils.py
scripts/: old.js  prepare-virtualenv.sh
shared_lib/: linux_host_config.py  server_health.py
ssh_lib/: __init__.py  apt.py  benchmark.py  config.py  dns.py  java.py  kernel.py  nginx.py  pkg_base.py  planetiler.py  pycurl.py  rclone.py  slugify.py  tasks.py  tasks_http_host.py  tasks_httphost.py  tasks_shared.py  (+3 more)
(+400 files in other folders)
